# crystalformer-x

./: README.md  pyproject.toml
.github/workflows/: tests.yml
crystalformer_x/: __init__.py
crystalformer_x/analysis/: README.md  __init__.py  __main__.py  _grid.py  _io.py  percolation.py  voronoi.py
crystalformer_x/screen/: README.md  __init__.py  __main__.py  filters.py  pipeline.py
tests/: test_percolation.py  test_screening.py  test_voronoi.py
